# verifier-workshop

./: Cargo.toml  README.md  metadata-peregrine.scale  metadata.scale  presentation-1.json  presentation-2.json  presentation-3.json
src/: credential.rs  errors.rs  kilt.rs  main.rs  utils.rs
