[package]
name = "kilt-verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde ={ version = "1.0", features = ["derive"] }
serde_json = "1"
blake2 = "0.10"
hex = "0.4"

subxt = "0.22"
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
sp-core = "*"